name:                hsImgPKstore
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CodiePP/hsImgPKstore#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Diemand
maintainer:          codieplusplus@apax.net
copyright:           2018 Alexander Diemand
category:            Privacy
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hsImgPKstore
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels

